added responsive for mobile device

--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
                    <button class="btn-primary"><i class="fa-solid fa-download"></i> Download CV</button>
                    <button class="btn-primary"><i class="fa-solid fa-phone"></i> Contact</button>
             </div>
-            <img width="580px" src="images/hardy.png" alt="">
+           <div class="banner-profile-pic">
+             <img src="images/hardy.png" alt="">
+           </div>
          </div>
     </header>
     <main>
